--- a/surelock/main_app/static/css/passwords/password-index.css
+++ b/surelock/main_app/static/css/passwords/password-index.css
@@ -6,7 +6,25 @@ html {
   height: 100%;
   background-color: #011727;
 }
+.menu {
+  background: none;
+}
+h1, p {
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  font-size: 1em;
+  font-weight: 500;
+  align-content: center;
+  color: black;
 
+}
+p {
+  font-size: 0.7em;
+  font-weight: 300;
+  align-content: center;
+}
 /* Styles for the loading spinner */
 .loading-spinner {
   position: fixed;
@@ -58,6 +76,7 @@ html {
   background-color: rgba(255, 255, 255, 0.3);
   color: white;
   cursor: pointer;
+  margin: 0;
 }
 
 .index-page {
@@ -113,13 +132,13 @@ html {
 
 
 	width: 88%;
-	height: 3.5vh;
+	height: 5.5vh;
 	border-radius: 10px;
 	background-color: #E0B320;
 	border: none;
 	transition: transform 0.5s ease;
   font-weight: 800;
-  margin-bottom: 10px;
+  margin-top: 10px;
 
 	color: #011727;
 
@@ -141,6 +160,7 @@ html {
   height: 3vh;
   padding-left: 40px;
   padding-right: 20px;
+  margin: 25px 0 0 0;
 }
 
 #legend-date{
@@ -181,7 +201,7 @@ width: 20%;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
   padding: 20px;
-
+  margin: 100px 0 0 0;
   position: relative;
 }
 
@@ -246,7 +266,7 @@ width: 20%;
 }
 
 #button-in-tag {
-
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: start;
@@ -266,7 +286,7 @@ width: 20%;
 #username-text{
   font-weight: 300;
   font-style: italic;
-  width: 30% 
+  width: 20% 
 }
 #password-appname {
   width: 30%;
@@ -281,7 +301,8 @@ width: 20%;
 }
 
 #password-note {
-width: 20%;
+width: 30%;
+font-kerning: normal;
 }
 #LoginForm {
   display: flex;
